[gd_scene load_steps=2 format=2]

[ext_resource path="res://DataTaboo/Components/2D/Spawner2D/Spawner2D.gd" type="Script" id=1]

[node name="Spawner2D" type="Node2D"]
script = ExtResource( 1 )
time_till_spawn_timer_starts = 1.0
time_between_spawns = 3.0

[node name="SpawnTimerStartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimerStartTimer" to="." method="_on_SpawnTimerStartTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
